# imageViewer

./: main.cpp  meson.build
images/: convert.ppm  fun.ppm
include/: Encoder.h  JPEGviewer.h  PPMviewer.h  encodeFactory.h  encoderJPEG.h  loader.h  loaderFactory.h  viewer.h
src/: JPEGviewer.cpp  PPMviewer.cpp  encoderJPEG.cpp  viewer.cpp
